--- a/src/shared/Header/views/HeaderLogo/HeaderLogo.scss
+++ b/src/shared/Header/views/HeaderLogo/HeaderLogo.scss
@@ -1,4 +1,4 @@
-@import "style/variables";
+@use "style/variables" as vars;
 
 .HeaderLogo {
 
@@ -9,7 +9,7 @@
         gap: 8px;
     }
 
-    @media (max-width: $mobile-width-small) {
+    @media (max-width: vars.$m-mobile-width-small) {
         height: 64px;
         gap: 4px;
     }
@@ -17,7 +17,7 @@
     &__icon {
         transform: translateY(3px);
 
-        @media (max-width: $mobile-width-small) {
+        @media (max-width: vars.$m-mobile-width-small) {
             width: 40px;
             height: 40px;
             transform: scale(1.45);
@@ -30,17 +30,17 @@
     }
 
     &__title {
-        font-size: $font-size-20;
-        font-weight: $font-weight-sm;
-        line-height: $line-height-32;
-        color: $custom-text-color;
+        font-size: vars.$font-size-20;
+        font-weight: vars.$font-weight-sm;
+        line-height: vars.$line-height-32;
+        color: vars.$custom-text-color;
 
         transform: translateY(3px);
 
-        @media (max-width: $mobile-width-small) {
-            font-size: $font-size-18;
-            font-weight: $font-weight-sm;
-            line-height: $line-height-24;
+        @media (max-width: vars.$m-mobile-width-small) {
+            font-size: vars.$font-size-18;
+            font-weight: vars.$font-weight-sm;
+            line-height: vars.$line-height-24;
         }
     }
 }
