--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -1,4 +1,4 @@
-@import './fonts';
-@import './variables';
-@import './base';
-@import '../ui/index.scss';
+@use 'fonts';
+@use 'variables';
+@use 'base';
+@use '../ui/index.scss';
