--- a/src/ui/index.scss
+++ b/src/ui/index.scss
@@ -1,89 +1,89 @@
-@import '@steroidsjs/bootstrap/scss/normalize';
-@import '@steroidsjs/bootstrap/scss/variables';
-@import '@steroidsjs/bootstrap/scss/mixins';
-@import '@steroidsjs/bootstrap/scss/fonts';
-@import '@steroidsjs/bootstrap/scss/animations';
+@use '~@steroidsjs/bootstrap/scss/normalize';
+@use '~@steroidsjs/bootstrap/scss/variables';
+@use '~@steroidsjs/bootstrap/scss/mixins';
+@use '~@steroidsjs/bootstrap/scss/fonts';
+@use '~@steroidsjs/bootstrap/scss/animations';
 
-@import '@steroidsjs/bootstrap/content/Accordion/AccordionView';
-@import '@steroidsjs/bootstrap/content/Accordion/AccordionItemView';
-@import '@steroidsjs/bootstrap/crud/Crud/CrudView';
-@import '@steroidsjs/bootstrap/content/Alert/AlertView';
-@import '@steroidsjs/bootstrap/content/Avatar/AvatarView';
-@import '@steroidsjs/bootstrap/content/Avatar/AvatarGroupView';
-@import '@steroidsjs/bootstrap/content/Badge/BadgeView';
-@import '@steroidsjs/bootstrap/content/Calendar/CalendarView';
-@import '@steroidsjs/bootstrap/content/Calendar/CaptionElement';
-@import '@steroidsjs/bootstrap/content/Card/CardView';
-@import '@steroidsjs/bootstrap/content/Detail/DetailView';
-@import '@steroidsjs/bootstrap/content/DropDown/DropDownView';
-@import '@steroidsjs/bootstrap/content/Menu/MenuItemView';
-@import '@steroidsjs/bootstrap/content/Menu/MenuView';
-@import '@steroidsjs/bootstrap/content/Icon/IconView';
-@import '@steroidsjs/bootstrap/content/CopyToClipboard/CopyToClipboardView';
-@import '@steroidsjs/bootstrap/form/AutoCompleteField/AutoCompleteFieldView';
-@import '@steroidsjs/bootstrap/form/Button/ButtonView';
-@import '@steroidsjs/bootstrap/form/CheckboxField/CheckboxFieldView';
-@import '@steroidsjs/bootstrap/form/CheckboxListField/CheckboxListFieldView';
-@import '@steroidsjs/bootstrap/form/DateField/DateFieldView';
-@import '@steroidsjs/bootstrap/form/DateRangeField/DateRangeFieldView';
-@import '@steroidsjs/bootstrap/form/DateTimeField/DateTimeFieldView';
-@import '@steroidsjs/bootstrap/form/DateTimeRangeField/DateTimeRangeFieldView';
-@import '@steroidsjs/bootstrap/form/TimeRangeField//TimeRangeFieldView';
-@import '@steroidsjs/bootstrap/form/DropDownFieldItem/DropDownFieldItemView';
-@import '@steroidsjs/bootstrap/form/DropDownField/DropDownFieldView';
-@import '@steroidsjs/bootstrap/form/FieldLayout/FieldLayoutView';
-@import '@steroidsjs/bootstrap/form/FieldList/FieldListView';
-@import '@steroidsjs/bootstrap/form/FieldList/FieldListItemView';
-@import '@steroidsjs/bootstrap/form/FileField/FileFieldView';
-@import '@steroidsjs/bootstrap/form/ImageField/ImageFieldView';
-@import '@steroidsjs/bootstrap/form/FileField/FileFieldItemView';
-@import '@steroidsjs/bootstrap/form/FieldSet/FieldSetView';
-@import '@steroidsjs/bootstrap/form/Form/FormView';
-@import '@steroidsjs/bootstrap/form/HtmlField/HtmlFieldView';
-@import '@steroidsjs/bootstrap/form/InputField/InputFieldView';
-@import '@steroidsjs/bootstrap/form/NumberField/NumberFieldView';
-@import '@steroidsjs/bootstrap/form/PasswordField/PasswordFieldView';
-@import '@steroidsjs/bootstrap/form/RateField/RateFieldView';
-@import '@steroidsjs/bootstrap/form/RadioField/RadioFieldView';
-@import '@steroidsjs/bootstrap/form/RadioListField/RadioListFieldView';
-@import '@steroidsjs/bootstrap/form/ReCaptchaField/ReCaptchaFieldView';
-@import '@steroidsjs/bootstrap/form/SliderField/SliderFieldView';
-@import '@steroidsjs/bootstrap/form/SwitcherField/SwitcherFieldView';
-@import '@steroidsjs/bootstrap/form/TextField/TextFieldView';
-@import '@steroidsjs/bootstrap/form/TimeField/TimeFieldView';
-@import '@steroidsjs/bootstrap/form/TimeField/TimePanelView';
-@import '@steroidsjs/bootstrap/layout/Header/HeaderView';
-@import '@steroidsjs/bootstrap/layout/Tooltip/TooltipView';
-@import '@steroidsjs/bootstrap/layout/Notifications/NotificationsView';
-@import '@steroidsjs/bootstrap/layout/Notifications/NotificationsItemView';
-@import '@steroidsjs/bootstrap/layout/Loader/LoaderView';
-@import '@steroidsjs/bootstrap/layout/ProgressBar/LineProgressBarView';
-@import '@steroidsjs/bootstrap/layout/ProgressBar/CircleProgressBarView';
-@import '@steroidsjs/bootstrap/layout/Skeleton/SkeletonView';
-@import '@steroidsjs/bootstrap/layout/Sidebar/SidebarView';
-@import '@steroidsjs/bootstrap/list/ControlsColumnView/ControlsColumnView';
-@import '@steroidsjs/bootstrap/list/CheckboxColumn/CheckboxColumnView';
-@import '@steroidsjs/bootstrap/list/Empty/EmptyView';
-@import '@steroidsjs/bootstrap/list/Grid/GridView';
-@import '@steroidsjs/bootstrap/list/Grid/views/ContentColumnView/ContentColumnView';
-@import '@steroidsjs/bootstrap/list/FlexGrid/FlexGridView';
-@import '@steroidsjs/bootstrap/list/List/ListView';
-@import '@steroidsjs/bootstrap/list/Pagination/PaginationButtonView';
-@import '@steroidsjs/bootstrap/list/Pagination/PaginationMoreView';
-@import '@steroidsjs/bootstrap/list/PaginationSize/PaginationSizeView';
-@import '@steroidsjs/bootstrap/list/Steps/StepsView';
-@import '@steroidsjs/bootstrap/list/Steps/StepItemView';
-@import '@steroidsjs/bootstrap/modal/Modal/ModalView';
-@import '@steroidsjs/bootstrap/nav/Breadcrubms/BreadcrumbsView';
-@import '@steroidsjs/bootstrap/nav/Controls/ControlsView';
-@import '@steroidsjs/bootstrap/nav/Nav/NavBarView';
-@import '@steroidsjs/bootstrap/nav/Nav/NavButtonView';
-@import '@steroidsjs/bootstrap/nav/Nav/NavIconView';
-@import '@steroidsjs/bootstrap/nav/Nav/NavLinkView';
-@import '@steroidsjs/bootstrap/nav/Nav/NavListView';
-@import '@steroidsjs/bootstrap/nav/Nav/NavTabsView';
-@import '@steroidsjs/bootstrap/nav/Tree/TreeView';
-@import '@steroidsjs/bootstrap/nav/ButtonGroup/ButtonGroupView';
-@import '@steroidsjs/bootstrap/typography/Text/TextView';
-@import '@steroidsjs/bootstrap/typography/Title/TitleView';
+@use '~@steroidsjs/bootstrap/content/Accordion/AccordionView';
+@use '~@steroidsjs/bootstrap/content/Accordion/AccordionItemView';
+@use '~@steroidsjs/bootstrap/crud/Crud/CrudView';
+@use '~@steroidsjs/bootstrap/content/Alert/AlertView';
+@use '~@steroidsjs/bootstrap/content/Avatar/AvatarView';
+@use '~@steroidsjs/bootstrap/content/Avatar/AvatarGroupView';
+@use '~@steroidsjs/bootstrap/content/Badge/BadgeView';
+@use '~@steroidsjs/bootstrap/content/Calendar/CalendarView';
+@use '~@steroidsjs/bootstrap/content/Calendar/CaptionElement';
+@use '~@steroidsjs/bootstrap/content/Card/CardView';
+@use '~@steroidsjs/bootstrap/content/Detail/DetailView';
+@use '~@steroidsjs/bootstrap/content/DropDown/DropDownView';
+@use '~@steroidsjs/bootstrap/content/Menu/MenuItemView';
+@use '~@steroidsjs/bootstrap/content/Menu/MenuView';
+@use '~@steroidsjs/bootstrap/content/Icon/IconView';
+@use '~@steroidsjs/bootstrap/content/CopyToClipboard/CopyToClipboardView';
+@use '~@steroidsjs/bootstrap/form/AutoCompleteField/AutoCompleteFieldView';
+@use '~@steroidsjs/bootstrap/form/Button/ButtonView';
+@use '~@steroidsjs/bootstrap/form/CheckboxField/CheckboxFieldView';
+@use '~@steroidsjs/bootstrap/form/CheckboxListField/CheckboxListFieldView';
+@use '~@steroidsjs/bootstrap/form/DateField/DateFieldView';
+@use '~@steroidsjs/bootstrap/form/DateRangeField/DateRangeFieldView';
+@use '~@steroidsjs/bootstrap/form/DateTimeField/DateTimeFieldView';
+@use '~@steroidsjs/bootstrap/form/DateTimeRangeField/DateTimeRangeFieldView';
+@use '~@steroidsjs/bootstrap/form/TimeRangeField//TimeRangeFieldView';
+@use '~@steroidsjs/bootstrap/form/DropDownFieldItem/DropDownFieldItemView';
+@use '~@steroidsjs/bootstrap/form/DropDownField/DropDownFieldView';
+@use '~@steroidsjs/bootstrap/form/FieldLayout/FieldLayoutView';
+@use '~@steroidsjs/bootstrap/form/FieldList/FieldListView';
+@use '~@steroidsjs/bootstrap/form/FieldList/FieldListItemView';
+@use '~@steroidsjs/bootstrap/form/FileField/FileFieldView';
+@use '~@steroidsjs/bootstrap/form/ImageField/ImageFieldView';
+@use '~@steroidsjs/bootstrap/form/FileField/FileFieldItemView';
+@use '~@steroidsjs/bootstrap/form/FieldSet/FieldSetView';
+@use '~@steroidsjs/bootstrap/form/Form/FormView';
+@use '~@steroidsjs/bootstrap/form/HtmlField/HtmlFieldView';
+@use '~@steroidsjs/bootstrap/form/InputField/InputFieldView';
+@use '~@steroidsjs/bootstrap/form/NumberField/NumberFieldView';
+@use '~@steroidsjs/bootstrap/form/PasswordField/PasswordFieldView';
+@use '~@steroidsjs/bootstrap/form/RateField/RateFieldView';
+@use '~@steroidsjs/bootstrap/form/RadioField/RadioFieldView';
+@use '~@steroidsjs/bootstrap/form/RadioListField/RadioListFieldView';
+@use '~@steroidsjs/bootstrap/form/ReCaptchaField/ReCaptchaFieldView';
+@use '~@steroidsjs/bootstrap/form/SliderField/SliderFieldView';
+@use '~@steroidsjs/bootstrap/form/SwitcherField/SwitcherFieldView';
+@use '~@steroidsjs/bootstrap/form/TextField/TextFieldView';
+@use '~@steroidsjs/bootstrap/form/TimeField/TimeFieldView';
+@use '~@steroidsjs/bootstrap/form/TimeField/TimePanelView';
+@use '~@steroidsjs/bootstrap/layout/Header/HeaderView';
+@use '~@steroidsjs/bootstrap/layout/Tooltip/TooltipView';
+@use '~@steroidsjs/bootstrap/layout/Notifications/NotificationsView';
+@use '~@steroidsjs/bootstrap/layout/Notifications/NotificationsItemView';
+@use '~@steroidsjs/bootstrap/layout/Loader/LoaderView';
+@use '~@steroidsjs/bootstrap/layout/ProgressBar/LineProgressBarView';
+@use '~@steroidsjs/bootstrap/layout/ProgressBar/CircleProgressBarView';
+@use '~@steroidsjs/bootstrap/layout/Skeleton/SkeletonView';
+@use '~@steroidsjs/bootstrap/layout/Sidebar/SidebarView';
+@use '~@steroidsjs/bootstrap/list/ControlsColumnView/ControlsColumnView';
+@use '~@steroidsjs/bootstrap/list/CheckboxColumn/CheckboxColumnView';
+@use '~@steroidsjs/bootstrap/list/Empty/EmptyView';
+@use '~@steroidsjs/bootstrap/list/Grid/GridView';
+@use '~@steroidsjs/bootstrap/list/Grid/views/ContentColumnView/ContentColumnView';
+@use '~@steroidsjs/bootstrap/list/FlexGrid/FlexGridView';
+@use '~@steroidsjs/bootstrap/list/List/ListView';
+@use '~@steroidsjs/bootstrap/list/Pagination/PaginationButtonView';
+@use '~@steroidsjs/bootstrap/list/Pagination/PaginationMoreView';
+@use '~@steroidsjs/bootstrap/list/PaginationSize/PaginationSizeView';
+@use '~@steroidsjs/bootstrap/list/Steps/StepsView';
+@use '~@steroidsjs/bootstrap/list/Steps/StepItemView';
+@use '~@steroidsjs/bootstrap/modal/Modal/ModalView';
+@use '~@steroidsjs/bootstrap/nav/Breadcrubms/BreadcrumbsView';
+@use '~@steroidsjs/bootstrap/nav/Controls/ControlsView';
+@use '~@steroidsjs/bootstrap/nav/Nav/NavBarView';
+@use '~@steroidsjs/bootstrap/nav/Nav/NavButtonView';
+@use '~@steroidsjs/bootstrap/nav/Nav/NavIconView';
+@use '~@steroidsjs/bootstrap/nav/Nav/NavLinkView';
+@use '~@steroidsjs/bootstrap/nav/Nav/NavListView';
+@use '~@steroidsjs/bootstrap/nav/Nav/NavTabsView';
+@use '~@steroidsjs/bootstrap/nav/Tree/TreeView';
+@use '~@steroidsjs/bootstrap/nav/ButtonGroup/ButtonGroupView';
+@use '~@steroidsjs/bootstrap/typography/Text/TextView';
+@use '~@steroidsjs/bootstrap/typography/Title/TitleView';
 
