--- a/src/routes/DocsPage/views/UiComponentInfo/views/DemoCard/DemoCard.scss
+++ b/src/routes/DocsPage/views/UiComponentInfo/views/DemoCard/DemoCard.scss
@@ -1,4 +1,4 @@
-@import 'style/variables';
+@use "style/variables" as vars;
 
 .DemoCard {
     margin-bottom: 40px;
@@ -14,6 +14,6 @@
     }
 
     &__link { 
-        color: $text-color;
+        color: vars.$text-color;
     }
 }
