--- a/src/routes/DocsPage/views/UiComponentInfo/views/TabGroupView/TabGroupView.scss
+++ b/src/routes/DocsPage/views/UiComponentInfo/views/TabGroupView/TabGroupView.scss
@@ -1,4 +1,4 @@
-@import "style/variables";
+@use "style/variables" as vars;
 
 :root {
     --tab-text-active-color: #312c3a;
@@ -20,16 +20,16 @@ $tab-icon-color: var(--tab-icon-color);
 $tab-icon-active-color: var(--tab-icon-active-color);
 
 .TabGroupView {
-    background-color: $control-background-color;
+    background-color: vars.$control-background-color;
     width: 452px;
     padding: 4px;
     border-radius: 40px;
 
-    @media (max-width: $tablet-width) {
+    @media (max-width: vars.$m-tablet-width) {
         width: 372px;
     }
 
-    @media (max-width: $mobile-width) {
+    @media (max-width: vars.$m-mobile-width) {
         width: 306px;
     }
 
@@ -40,34 +40,34 @@ $tab-icon-active-color: var(--tab-icon-active-color);
     &__button {
         width: 220px;
         border-radius: 40px;
-        background-color: $control-background-color;
+        background-color: vars.$control-background-color;
         color: $tab-text-color;
         padding: 11px 16px;
 
-        @media (max-width: $tablet-width) {
+        @media (max-width: vars.$m-tablet-width) {
             width: 180px;
             padding: 5px 16px;
         }
 
-        @media (max-width: $mobile-width) {
+        @media (max-width: vars.$m-mobile-width) {
             width: 147px;
             padding: 5px 12px;
         }
 
         .Button__text {
-            font-size: $font-size-16;
-            font-weight: $font-weight-sm;
-            line-height: $line-height-24;
+            font-size: vars.$font-size-16;
+            font-weight: vars.$font-weight-sm;
+            line-height: vars.$line-height-24;
 
-            @media (max-width: $tablet-width) {
-                font-size: $font-size-14;
-                font-weight: $font-weight-sm;
-                line-height: $line-height-24;
+            @media (max-width: vars.$m-tablet-width) {
+                font-size: vars.$font-size-14;
+                font-weight: vars.$font-weight-sm;
+                line-height: vars.$line-height-24;
             }
         }
 
         &:hover {
-            background-color: $control-background-color;
+            background-color: vars.$control-background-color;
         }
 
         .IconView svg path,
@@ -82,10 +82,10 @@ $tab-icon-active-color: var(--tab-icon-active-color);
 
         &_active {
             color: $tab-text-active-color;
-            background-color: $control-active-background-color;
+            background-color: vars.$control-active-background-color;
 
             &:hover {
-                background-color: $control-active-background-color;
+                background-color: vars.$control-active-background-color;
             }
 
             .IconView svg path,
