--- a/src/routes/IndexPage/views/FeaturesSection/FeaturesSection.scss
+++ b/src/routes/IndexPage/views/FeaturesSection/FeaturesSection.scss
@@ -1,4 +1,4 @@
-@import "style/variables";
+@use "style/variables" as vars;
 
 .FeaturesSection {
     padding: 0 32px 17px 32px;
@@ -6,10 +6,10 @@
     flex-flow: row nowrap;
     column-gap: 16px;
 
-    @media (max-width: $tablet-width){
+    @media (max-width: vars.$m-tablet-width){
         padding: 0 16px 16px 16px;
     }
-    @media (max-width: $tablet-width-small){
+    @media (max-width: vars.$m-tablet-width-small){
           flex-flow: column nowrap;
           row-gap: 16px;
           padding: 0;
@@ -22,11 +22,11 @@
     .FeatureCard {
         width: 47.9166vw;
 
-        @media (max-width: $tablet-width){
+        @media (max-width: vars.$m-tablet-width){
             width: 47.65625vw;
         }
 
-        @media (max-width: $tablet-width-small){
+        @media (max-width: vars.$m-tablet-width-small){
             width: 100%;  
         }
     }
