--- a/src/shared/Header/Header.scss
+++ b/src/shared/Header/Header.scss
@@ -1,4 +1,4 @@
-@import "style/variables";
+@use "style/variables" as vars;
 
 :root {
     --control-background-color: #f1f5f7;
@@ -17,13 +17,13 @@ $control-background-color: var(--control-background-color);
     align-items: center;
     justify-content: space-between;
     height: auto !important;
-    background-color: $custom-background-color;
+    background-color: vars.$custom-background-color;
     height: 64px;
     max-height: 64px;
 
     box-shadow: 0px 1px 4px 0px rgba(0, 0, 0, 0.1);
 
-    @media (max-width: $tablet-width-small) {
+    @media (max-width: vars.$m-tablet-width-small) {
         padding: 0 12px;
     }
 
@@ -53,7 +53,7 @@ $control-background-color: var(--control-background-color);
                 svg {
                     path,
                     circle {
-                        stroke: $custom-icon-color;
+                        stroke: vars.$custom-icon-color;
                     }
                 }
             }
@@ -72,13 +72,13 @@ $control-background-color: var(--control-background-color);
             .ButtonGroupView__button:not(.ButtonGroupView__button_active) .IconView svg path,
             rect,
             circle {
-                stroke: $custom-icon-color;
+                stroke: vars.$custom-icon-color;
             }
 
             .ButtonGroupView__button_active .IconView svg path,
             rect,
             circle {
-                stroke: $custom-icon-active;
+                stroke: vars.$custom-icon-active;
             }
         }
 
