--- a/src/shared/ThemesButtons/ThemesButtons.scss
+++ b/src/shared/ThemesButtons/ThemesButtons.scss
@@ -1,10 +1,10 @@
-@import "style/variables";
+@use "style/variables" as vars;
 
 .ThemesButtons {
     column-gap: 2px;
     padding: 2px;
-    background-color: $light-gray;
-    border-radius: $radius-large;
+    background-color: vars.$light-gray;
+    border-radius: vars.$radius-large;
     display: flex;
     flex-flow: row;
     align-items: center;
@@ -12,7 +12,7 @@
     .ButtonView {
         border: none;
         padding: 3px;
-        border-radius: $radius-large;
+        border-radius: vars.$radius-large;
         width: 30px;
         height: 30px;
     }
