--- a/src/style/customVariables/index.scss
+++ b/src/style/customVariables/index.scss
@@ -1,3 +1,3 @@
-@import './typography.scss';
-@import './colors.scss';
-@import './media.scss';
+@forward 'typography.scss';
+@forward 'colors.scss';
+@forward 'media.scss';
